improuve URL constructor deprecation